# grip-tomo

./: .env.example  .gitignore  .zenodo.json  17127842.json  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: mirror.yaml
docs/: CHANGELOG_2.0.0_alpha.md  cistem_subtomogram_simulation_quickstart.md  parsl_hpc_quickstart.md
docs/api/: griptomo.html  index.html  search.js
docs/tutorial_notebook/: combined_features_mock_training_cleaned_concatenated.csv  (+3 more)
griptomo/: __init__.py
tests/: test_at_single_folder.py  test_core.py  test_end_to_end_full_pipeline.py  test_filter_mrc.py  test_integration_prepare_to_single_folder.py  test_invert_mrc_density.py  test_merge_mrcs_in_this_list_noise.py  test_parsl_apps.py  test_prepare_multiple_conditions.py  test_reconstruct_simulated_bash.py  test_replace_defocus_in_star.py  test_run_at_many_input_folders.py  test_run_at_single_input_folder.py  test_sliding_window.py  test_submit_at_many_folders.py  test_template_runscript.py  test_template_simulate_tilt_noise.py  test_use_parallelized_cores.py
utils/: 2_reconstruct_simulated.bash  angles.txt  at_single_folder.py  filter_mrc.py  in_nm.defocus_template  invert_mrc_density.py  merge_mrc_s_in_this_list_noise.py  prepare_multiple_conditions.py  replace_defocus_in_star.py  run.sbatch  run_at_many_input_folders_that_has_both_many_pdb_and_many_conditions.py  run_at_single_input_folder.py  sliding_window.py  submit_at_many_folders.py  template_runscript.py  template_simulate-tilt-noise.sh  try_these_conditions.txt  use_parallelized_cores.py
(+389 files in other folders)
